--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Zaker</string>
+
+    <string name="update_title">有更新可用</string>
+    <string name="update_description">新版%1$s版本可用\n更新内容\n%2$s</string>
+    <string name="update_button">现在升级</string>
+
+    <string name="common_cancel">取消</string>
+
 </resources>
